album par type + add media
